--- a/src/main/resources/static/Admin/request-status.html
+++ b/src/main/resources/static/Admin/request-status.html
@@ -49,7 +49,12 @@
                       <div class="status-line"></div>
                       <div class="status-steps">
                           <div class="status-step" data-key="request">
-                              <div class="status-circle"><div class="circle-middle"><div class="circle-inner"></div></div><span class="circle-icon">✓</span></div>
+                              <div class="status-circle">
+                                <div class="circle-middle">
+                                  <div class="circle-inner"></div>
+                                </div>
+                                <span class="circle-icon">✓</span>
+                              </div>
                               <p class="status-label">ส่งคำขอ</p>
                           </div>
                           <div class="status-step" data-key="approval">
