add content(just side bar & header...)

--- a/src/main/resources/static/Admin/schedule.html
+++ b/src/main/resources/static/Admin/schedule.html
@@ -3,10 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="sidebar.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>sehedule</h1>
-    
+    <div id="sidebar"></div>
+
+    <div class="container">
+        <main>
+            <div id="breadcrumb-placeholder" class="header"></div>
+        </main>
+    </div>
+
+    <script src="sidebar.js"></script>
+    <script src="breadcrumb.js" defer></script>
 </body>
 </html>
