--- a/src/main/resources/static/User/userform.html
+++ b/src/main/resources/static/User/userform.html
@@ -3,29 +3,34 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="userform.css"> 
     <link rel="stylesheet" href="../all.css">
-    <link rel="icon" href="../homepageResources/icon.png" type="image/x-icon">
+    <link rel="stylesheet" href="userform.css"> 
+    <link rel="icon" href="homepageResources/icon.png" type="image/x-icon">
     <title>Pet Adoption Form | Pet Adoption System</title>
 </head>
 <body>
     <!-- navigation bar-->
 <header>
     <nav class="navbar">
-        <div class="logo">
-            <img src="../homepageResources/icon.png" alt="Logo">
-        </div>
+            <div class="logo">
+                <img src="../homepageResources/icon.png" alt="Logo">
+            </div>
 
-        <ul class="nav-links">
-            <li class="active"><a href="../index.html">Homepage</a></li>
-            <li><a href="petlisting.html" class="active">Pet Listing</a></li>
-            <li><a href="contact.html">About/Contact Us</a></li>
-        </ul> 
+            <nav class="nav-button">
+                <ul class="nav-links">
+                    <li><a href="index.html">Homepage</a></li>
+                    <li><a href="User/petlisting.html">Pet Listing</a></li>
+                    <li><a href="User/status.html">Adoption Status</a></li>
+                    <li><a href="User/contact.html">About/Contact Us</a></li>
+                </ul>
 
-        <a href="/login.html">
-            <button class="logout-btn">Log out</button> 
-        </a>
-    </nav>
+                <ul class="nav-account">
+                    <li id="login-butt" style="display: inline;"><a href="login.html">Log in</a></li>
+                    <li id="register-butt" style="display: inline;"><a href="register.html">Create account</a></li>
+                    <button id="profile"><span class="solar--user-bold"></span></button>
+                </ul>
+            </nav>
+        </nav>
 
     <div class="hamburger">
         ☰
