--- a/src/main/resources/static/User/userform.html
+++ b/src/main/resources/static/User/userform.html
@@ -18,10 +18,10 @@
 
             <nav class="nav-button">
                 <ul class="nav-links">
-                    <li><a href="index.html">Homepage</a></li>
-                    <li><a href="User/petlisting.html">Pet Listing</a></li>
-                    <li><a href="User/status.html">Adoption Status</a></li>
-                    <li><a href="User/contact.html">About/Contact Us</a></li>
+                    <li><a href="../index.html">Homepage</a></li>
+                    <li><a href="petlisting.html">Pet Listing</a></li>
+                    <li><a href="status.html">Adoption Status</a></li>
+                    <li><a href="contact.html">About/Contact Us</a></li>
                 </ul>
 
                 <ul class="nav-account">
