Revert changes to petdetail

--- a/src/main/resources/static/Admin/petdetail.html
+++ b/src/main/resources/static/Admin/petdetail.html
@@ -64,8 +64,7 @@
 
                 <div class="owner-info hidden" id="ownerInfoSection">
                     <h3 class="owner-title">ข้อมูลผู้รับเลี้ยง</h3>
-                    <div id = "ownerRequestsContainer"></div>
-                    <!-- <div class="owner-grid">
+                    <div class="owner-grid">
                         <div class="owner-field"><span class="field-label">ชื่อจริง</span><span class="field-value" id="ownerFirstname">...</span></div>
                         <div class="owner-field"><span class="field-label">นามสกุล</span><span class="field-value" id="ownerLastname">...</span></div>
                         <div class="owner-field"><span class="field-label">วัน/เดือน/ปีเกิด</span><span class="field-value" id="ownerDob">...</span></div>
@@ -84,7 +83,7 @@
                             <div class="question-text">ทำไมคุณถึงอยากรับสัตว์เลี้ยงตัวนี้ไว้?</div>
                             <div class="answer-text" id="ownerReason">...</div>
                         </div>
-                    </div> -->
+                    </div>
                 </div>
 
                 <div class="no-owner-message hidden" id="noOwnerMessage">
