edited status logic for user

--- a/src/main/resources/static/User/status.html
+++ b/src/main/resources/static/User/status.html
@@ -77,7 +77,7 @@
                 </div>
                 <div class="card-body">
                     <p class="card-label">PetName</p>
-                    <p class="card-value" id="pet-name">Lucky</p>
+                    <p class="card-value" id="pet-name"></p>
                 </div>
             </div>
 
@@ -85,9 +85,9 @@
                 <div class="card-avatar"><span class="solar--user-bold"></span></div>
                 <div class="card-body">
                     <p class="card-label">UserName</p>
-                    <p class="card-value" id="user-username">User</p>
+                    <p class="card-value" id="user-username"></p>
                     <p class="card-label">Email</p>
-                    <p class="card-value" id="user-email">example@gmail.com</p>
+                    <p class="card-value" id="user-email"></p>
                 </div>
             </div>
         </section>
