change location to download file

--- a/src/main/resources/static/showAnimal.html
+++ b/src/main/resources/static/showAnimal.html
@@ -67,6 +67,7 @@
                     <th>Accept Right</th>
                     <th>Home Visits</th>
                     <th>Status</th>
+                    <th>receiveType</th>
                     <th>Identity Doc</th>
                     <th>Residence Doc</th>
                     <th>Resultestimate</th>
@@ -112,10 +113,12 @@
                         <td>${user.acceptRight || ''}</td>
                         <td>${user.homeVisits || ''}</td>
                         <td>${user.status || ''}</td>
+                        <td>${user.receiveType || ''}</td>
                         <td>${user.identityDoc !== "-" ? `<a class="download-link" href="http://localhost:8081/api/userform/download/${user.identityDoc}">${user.identityDoc}</a>` : '-'}</td>
                         <td>${user.residenceDoc !== "-" ? `<a class="download-link" href="http://localhost:8081/api/userform/download/${user.residenceDoc}">${user.residenceDoc}</a>` : '-'}</td>
                         <td>${user.resultEstimate || ''}</td>
                         <td>${user.meetDate || ''}</td>
+                        
                     `;
 
                     tbody.appendChild(tr);
